[gd_scene load_steps=7 format=3 uid="uid://d0jx50ppi6yqu"]

[ext_resource type="LabelSettings" uid="uid://cgayqw338p8rp" path="res://Sunburst/Styles/BossText.tres" id="1_gq2yv"]
[ext_resource type="Script" path="res://Sunburst/Scenes/Boss/Boss.gd" id="1_qgnjx"]
[ext_resource type="Texture2D" uid="uid://dec1x6jrir6ih" path="res://Sunburst/Assets/final-boss.png" id="2_mynhr"]

[sub_resource type="LabelSettings" id="LabelSettings_pylqh"]
font_size = 60
font_color = Color(0.752941, 0.223529, 0.168627, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4vh6t"]
font_size = 44
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ayro0"]
font_size = 60
font_color = Color(0.752941, 0.223529, 0.168627, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="BossControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qgnjx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Boss" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 80
bbcode_enabled = true
text = "[b]BOSS"
fit_content = true
scroll_active = false

[node name="BossLevel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BOSS LEVEL:"
label_settings = ExtResource("1_gq2yv")

[node name="BossHealth" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HEALTH: "
label_settings = SubResource("LabelSettings_pylqh")

[node name="BossDamage" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Damage:"
label_settings = SubResource("LabelSettings_4vh6t")

[node name="AttackBoss" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1080, 900)
layout_mode = 2
icon = ExtResource("2_mynhr")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "5 FORTITUDE - CLICK TO ATTACK"
label_settings = SubResource("LabelSettings_ayro0")

[connection signal="pressed" from="MarginContainer/VBoxContainer/AttackBoss" to="." method="_on_attack_boss_pressed"]
